Remove internalClusterTestWithoutGenFiles gradle task (#2651)
Closes