@@ -74,21 +74,6 @@ tasks {
         jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
     }
 
-    /**
-     * Same as internalClusterTest but with tracking of generational file setting disabled
-     */
-    val internalClusterTestWithoutGenFiles = register<Test>("internalClusterTestWithoutGenFiles") {
-        val sourceSet = sourceSets.getByName(InternalClusterTestPlugin.SOURCE_SET_NAME)
-        setTestClassesDirs(sourceSet.getOutput().getClassesDirs())
-        setClasspath(sourceSet.getRuntimeClasspath())
-        jvmArgs("-XX:+UseG1GC", "--add-opens=java.base/java.io=ALL-UNNAMED")
-        systemProperty("es.test.stateless.generational_files_tracking.enabled", "false")
-    }
-
-    check {
-        dependsOn(internalClusterTestWithoutGenFiles)
-    }
-
     yamlRestTest {
         usesDefaultDistribution()
     }
